All Agi sprites shown

--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
 </head>
 <body>
 <div id="content">
-<center>
 <h1>Agis Game</h1>
-<div id="pixiwindow"></div>
+<center>
+<div id="pixiwindow">
 	<div class="agi_right_1 sprite"></div>
 	<div class="agi_right_2 sprite"></div>
-</center>
+	<div class="agi_right_3 sprite"></div>
+
+	<div class="agi_left_1 sprite"></div>
+	<div class="agi_left_2 sprite"></div>
+	<div class="agi_left_3 sprite"></div>
+
+	<div class="agi_down_1 sprite"></div>
+	<div class="agi_down_2 sprite"></div>
+	<div class="agi_down_3 sprite"></div>
+
+	<div class="agi_up_1 sprite"></div>
+	<div class="agi_up_2 sprite"></div>
+	<div class="agi_up_3 sprite"></div>
 </div>
+</center>
 </div>
 
 <script src="extern/ben0biJSLoader.js"></script>
