Show all Agi sprites in correct manner, but not position.

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <h1>Agis Game</h1>
 <center>
 <div id="pixiwindow">
-	<div class="agi_right_1 sprite"></div>
-	<div class="agi_right_2 sprite"></div>
-	<div class="agi_right_3 sprite"></div>
+	<div class="agi right_1 sprite"></div>
+	<div class="agi right_2 sprite"></div>
+	<div class="agi right_3 sprite"></div>
 
-	<div class="agi_left_1 sprite"></div>
-	<div class="agi_left_2 sprite"></div>
-	<div class="agi_left_3 sprite"></div>
+	<div class="agi left_1 sprite"></div>
+	<div class="agi left_2 sprite"></div>
+	<div class="agi left_3 sprite"></div>
 
-	<div class="agi_down_1 sprite"></div>
-	<div class="agi_down_2 sprite"></div>
-	<div class="agi_down_3 sprite"></div>
+	<div class="agi down_1 sprite"></div>
+	<div class="agi down_2 sprite"></div>
+	<div class="agi down_3 sprite"></div>
 
-	<div class="agi_up_1 sprite"></div>
-	<div class="agi_up_2 sprite"></div>
-	<div class="agi_up_3 sprite"></div>
+	<div class="agi up_1 sprite"></div>
+	<div class="agi up_2 sprite"></div>
+	<div class="agi up_3 sprite"></div>
 </div>
 </center>
 </div>
