Agi seen again, YAY

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		log("[ OK ] All JS Files Loaded.");
 		log("--> Init game");
 		g_game=new aGame();
-		g_game.INIT('#pixiscreen');
+		g_game.INIT('#pixiwindow');
 		log("--> initializing game engine..");
 		var done=false;
 		var deltatime =0.0;
