--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 <div id="content">
-<h1>Agis Game</h1>
 <center>
+<br />
+<div id="title">Agis Game</div>
+<br />
 <div id="pixiwindow">
 <!--
 	<div class="agi sprite right_1"></div>
