--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <br />
 <div id="title">Agis Game</div>
 <br />
+<!-- 
+<div class="heart empty sprite"></div>
+<div class="heart f1 sprite"></div>
+<div class="heart half sprite"></div>
+-->
+<!-- <div class="heart f3 sprite"></div> -->
+<div class="heart full sprite"></div>
+
 <div id="pixiwindow">
 <!--
 	<div class="agi sprite right_1"></div>
