Showing some hearts.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <div class="heart empty sprite"></div>
 <div class="heart f1 sprite"></div>
 <div class="heart half sprite"></div>
--->
-<!-- <div class="heart f3 sprite"></div> -->
+<div class="heart f3 sprite"></div>
 <div class="heart full sprite"></div>
+-->
 
 <div id="pixiwindow">
 <!--
