Moved much files to the data folder. Better transblue_b image. Font not working, why?

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ sprite agi up_3
 		log("[ OK ] All JS files loaded.");
 		log("--> Loading GML..");
 		//jBash.initialize("#jBashWindow","#jBashInput");
-		PARSEGMLFILE("gml/map1.gml",gmlLoadDone);
+		PARSEGMLFILE("data/gml/map1.gml",gmlLoadDone);
 	}
 	
 	function gmlLoadDone()
