--- a/extern/jbash_manuals/link.html
+++ b/extern/jbash_manuals/link.html
@@ -5,6 +5,6 @@ Parameters:<br />
 <b><span class="jBashCmd">external_website</span></b>: The website name. <span class="jBashWarning">You cannot use space! You need to give 'http://' at begin.</span><br />
 <br />
 Example:<br />
-<span class="jBashCmd">jump to https://github.com</span><br />
+<span class="jBashCmd">link to https://github.com</span><br />
 <br />
 <small><span class="jBashCmd">link</span> command created by oki wan benobi @ 2019-03-27 (ymd)</small>
