More Preparations for the Maps

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Agis Game</title>
 	<meta charset="UTF-8"></meta>
 	<link rel="stylesheet" type="text/css" href="css/root.css">
+	<link rel="stylesheet" type="text/css" href="css/sprites.css">
+	<link rel="stylesheet" type="text/css" href="css/tiles.css">
 </head>
 <body>
 <div id="content">
@@ -13,29 +15,34 @@
 <br />
 
 <!--
+> tiles
+tile ti_default
+
 > sprites
-sprite heart empty
-sprite heart f1
-sprite heart half
-sprite heart f3
-sprite heart full
+sprite spr_heart empty
+sprite spr_heart f1
+sprite spr_heart half
+sprite spr_heart f3
+sprite spr_heart full
 
-sprite agi right_1
-sprite agi right_2
-sprite agi right_3
+sprite spr_agi right_1
+sprite spr_agi right_2
+sprite spr_agi right_3
 
-sprite agi left_1
-sprite agi left_2
-sprite agi left_3
+sprite spr_agi left_1
+sprite spr_agi left_2
+sprite spr_agi left_3
 
-sprite agi down_1
-sprite agi down_2
-sprite agi down_3
+sprite spr_agi down_1
+sprite spr_agi down_2
+sprite spr_agi down_3
 
-sprite agi up_1
-sprite agi up_2
-sprite agi up_3
+sprite spr_agi up_1
+sprite spr_agi up_2
+sprite spr_agi up_3
 -->
+
+<div class="tile ti_default"></div>
 
 <div id="pixiwindow">
 </div>
