Updated bank information

--- a/extern/jbash_manuals/donate.html
+++ b/extern/jbash_manuals/donate.html
@@ -1,6 +1,9 @@
 ﻿<hr>
 <h1>Please <span class="jBashCmd">donate</span>.</h1>
 
-Bank account information will follow soon.<br />
+Bank: Raiffeisenbank Weissenstein<br />
+Recipient: Benedict Jaeggi<br />
+IBAN: CH66 8080 8003 8663 6411 1<br />
+
 <br />
 <small><span class='jBashCmd'>donate</span> command created by oki wan benobi @ 2019-03-13 (ymd)</small>
