Updated bank information

--- a/extern/jbash_manuals/donate.html
+++ b/extern/jbash_manuals/donate.html
@@ -1,9 +1,10 @@
 ﻿<hr>
 <h1>Please <span class="jBashCmd">donate</span>.</h1>
-
-Bank: Raiffeisenbank Weissenstein<br />
-Recipient: Benedict Jaeggi<br />
-IBAN: CH66 8080 8003 8663 6411 1<br />
-
+<table border="0">
+<tr><td>Bank:</td><td>Raiffeisenbank Weissenstein</td></tr>
+<tr><td>Recipient:</td><td>Benedict Jaeggi</td></tr>
+<tr><td>IBAN:</td><td>CH66 8080 8003 8663 6411 1</td></tr>
+<tr><td>BIC/Swift:</td><td>RAIFCH22976</td></tr>
+</table>
 <br />
 <small><span class='jBashCmd'>donate</span> command created by oki wan benobi @ 2019-03-13 (ymd)</small>
