Cleaned stuff from EmulatroniX out of the base setup.

--- a/PIXI/index.html
+++ b/PIXI/index.html
@@ -18,10 +18,11 @@
 	<script src="js/EmuGraphicsAdapter.js"></script>
 		
 	<script>
+	//	var emuGraphics;
 
 		function mainLoop() 
 		{
-			emuGraphics.switchBuffers();
+	//		emuGraphics.switchBuffers();
 		}
 						
 		$(document).ready(function() 
