More Preps for the pixi version

--- a/PIXI/index.html
+++ b/PIXI/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
-	<title>EmulatroniX</title>
+	<title>Agis Game PIXI Version</title>
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 </head>
 <body>
